# Internet-consumption

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
config/: settings.py  urls.py
main/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_alter_internetconsumption_consumption_date.py
main/templates/: base.html  home_page.html
